started drawer implementation in main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">MobiquityChallenge</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string-array name="nav_drawer_items">
         <item>My Pics</item>
@@ -11,6 +10,8 @@
         <item>Map</item>
         <item>Settings</item>
     </string-array>
+    <string-array name="nav_drawer_icons">
 
+    </string-array>
 
 </resources>
