--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MobiquityChallenge</string>
+    <string name="app_name">Mobiquity Challenge</string>
     <string name="action_settings">Settings</string>
     <string-array name="nav_drawer_items">
         <item>My Pics</item>
@@ -11,7 +11,11 @@
         <item>Settings</item>
     </string-array>
     <string-array name="nav_drawer_icons">
-
+        <item>@drawable/ic_action_content_picture</item>
+        <item>@drawable/ic_action_rating_favorite</item>
+        <item>@drawable/ic_action_hardware_phone</item>
+        <item>@drawable/ic_action_location_map</item>
+        <item>@drawable/ic_action_action_settings</item>
     </string-array>
 
 </resources>
