--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,11 @@
     </string-array>
 
     <string name="dropbox_login">Login to DropBox</string>
+    <string name="dropbox_save">Save to DropBox</string>
+    <string name="local_save">Save to Local Storage</string>
+    <string name="cancel">Cancel</string>
+
+    <string name="dialog_creation_date">Creation Date:</string>
+    <string name="dialog_location">Location:</string>
 
 </resources>
